Update department,certification,employee,training session

--- a/views/certifications.hbs
+++ b/views/certifications.hbs
@@ -68,11 +68,11 @@
         <legend><strong>Add New Certification</strong></legend>
         <fieldset>
           <label>Certification Name:
-            <input type="text" name="certName" /></label>
+            <input type="text" name="certName" required/></label>
           <label>Certifying Organization:
-            <input type="text" name="certOrg" /></label>
+            <input type="text" name="certOrg" required/></label>
           <label>Description:
-            <textarea type="text" name="description"></textarea></label>
+            <textarea type="text" name="description" required></textarea></label>
         </fieldset>
         <input class="btn" type="submit" value="Add Certification" />
         <input class="btn" type="button" value="Cancel" onClick="browseMain()" />
@@ -82,13 +82,13 @@
       <form method="POST" action="/updateCertification" id="updateCertification">
         <legend><strong>Update Certification</strong></legend>
         <fieldset>
-            <input type="hidden" id="updateCertID" name="certID" disabled /></label>
+            <input type="hidden" id="updateCertID" name="certID" disabled required/></label>
           <label>Certification Name:
-            <input type="text" id="updateCertName" name="certName" /></label>
+            <input type="text" id="updateCertName" name="certName" required/></label>
           <label>Certifying Organization:
-            <input type="text" id="updateCertOrg" name="certOrg" /></label>
+            <input type="text" id="updateCertOrg" name="certOrg" required/></label>
           <label>Description:
-            <input type="text" id="updateCertDescription" name="description" class="longInput" /></label>
+            <input type="text" id="updateCertDescription" name="description" class="longInput" required/></label>
         </fieldset>
         <input class="btn" type="submit" value="Update Certification" />
         <input class="btn" type="button" value="Cancel" onClick="browseMain()" />
