--- a/views/certifications.hbs
+++ b/views/certifications.hbs
@@ -68,30 +68,39 @@
         <legend><strong>Add New Certification</strong></legend>
         <fieldset>
           <label>Certification Name: *
-            <input type="text" name="certName" required/></label>
+            <div class="input">
+            <input type="text" name="certName" required/>
+            <span class="req"></span></div></label>
           <label>Certifying Organization: *
-            <input type="text" name="certOrg" required/></label>
+            <div class="input">
+            <input type="text" name="certOrg" required/>
+            <span class="req"></span></div></label>
           <label>Description: *
-            <p>
-              <textarea type="text" name="description" required></textarea>
-            </p>
-          </label>
+            <div class="input">
+            <input
+              type="text"
+              id="updateDeptDescription"
+              name="description"
+              required
+            />
+            <span class="req"></span></div></label>
         </fieldset>
         <input class="btn" type="submit" value="Add Certification" />
         <input class="btn" type="button" value="Cancel" onClick="browseMain()" />
       </form>
     </div>
+    
     <div class="form-container" id="update" style="display: none;">
       <form method="POST" action="/updateCertification" id="updateCertification">
         <legend><strong>Update Certification</strong></legend>
         <fieldset>
             <input type="hidden" id="updateCertID" name="certID" class="required" disabled required/></label>
-          <label>Certification Name: *
-            <input type="text" id="updateCertName" name="certName" class="required" required/></label>
-          <label>Certifying Organization: *
-            <input type="text" id="updateCertOrg" name="certOrg" class="required" required/></label>
-          <label>Description: *
-            <input type="text" id="updateCertDescription" name="description" class="longInput" class="required" required/></label>
+          <label>Certification Name: *<div class="input">
+            <input type="text" id="updateCertName" name="certName" class="required" required/><span class="req"></span></div></label>
+          <label>Certifying Organization: *<div class="input">
+            <input type="text" id="updateCertOrg" name="certOrg" class="required" required/><span class="req"></span></div></label>
+          <label>Description: *<div class="input">
+            <input type="text" id="updateCertDescription" name="description" class="longInput" class="required" required/><span class="req"></span></div></label>
         </fieldset>
         <input class="btn" type="submit" value="Update Certification" />
         <input class="btn" type="button" value="Cancel" onClick="browseMain()" />
