--- a/views/departments.hbs
+++ b/views/departments.hbs
@@ -62,14 +62,16 @@
     <div id="insert" class="form-container" style="display:none;">
       <form id="add-department-form">
         <legend><strong>Add New Department</strong></legend>
-        <label>Name: *<span></span><input type="text" id="input-name" name="name" required/></label>
-        <label>Description: *<span></span>
+        <label>Name: *<div class="input"><input type="text" id="input-name" name="name" required/><span class="req"></span></div></label>
+        <label>Description: *
+          <div class="input">
           <input
             type="text"
             id="input-description"
             name="description"
             required
-          /></label>
+          /><span class="req"></span>
+          </div></label>
         <button type="submit">Submit</button>
         <button type="button" onClick="browseMain()">Cancel</button>
       </form>
@@ -79,15 +81,19 @@
       <form id="update-department-form">
         <legend><strong>Update Department</strong></legend>
         <input type="hidden" id="updateDeptID" name="id" />
-        <label>Name: *<span></span>
-          <input type="text" id="updateDeptName" name="name" required/></label>
-        <label>Description: *<span></span>
+        <label>Name: *
+          <div class="input">
+          <input type="text" id="updateDeptName" name="name" required/><span class="req"></span></div></label>
+        <label>Description: *
+          <div class="input">
           <input
             type="text"
             id="updateDeptDescription"
             name="description"
             required
-          /></label>
+          />
+          <span class="req"></span></div>
+          </label>
         <input class='btn' type="submit" value="Update Department"></input>
         <input class="btn" type="button" value="Cancel" onClick="browseMain()" />
       </form>
