--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -71,17 +71,18 @@
       <form id="addEmployee">
         <legend><strong>Add Employee</strong></legend>
         <fieldset>
-          <label>First Name: *
-            <input type="text" id="input-fname" name="fname" class="required" required/></label>
-          <label>Last Name: *
-            <input type="text" id="input-lname" name="lname" class="required" required/></label>
-          <label>Email: *
-            <input type="email" id="input-email" name="email" class="required" required/></label>
+          <label>First Name: *<div class="input">
+            <input type="text" id="input-fname" name="fname" class="required" required/><span class="req"></span></div></label>
+          <label>Last Name: *<div class="input">
+            <input type="text" id="input-lname" name="lname" class="required" required/><span class="req"></span></div></label>
+          <label>Email: *<div class="input">
+            <input type="email" id="input-email" name="email" class="required" required/><span class="req"></span></div></label>
           <label>Department:
             <select id="input-deptid" name="deptID">
               {{#each departments}}
                 <option value={{this.deptID}}>{{this.name}}</option>
               {{/each}}
+              <option value="None">None</option>
             </select>
           </label>
         </fieldset>
@@ -99,17 +100,18 @@
       <form id="updateEmployee">
         <legend><strong>Update Employee</strong></legend>
           <input type="hidden" name="employeeID" id="updateEmployeeID"/>
-          <label>First Name: *
-            <input type="text" name="fname" id="updateEmployeeFName" class="required" required/></label>
-          <label>Last Name: *
-            <input type="text" name="lname" id="updateEmployeeLName" class="required" required/></label>
-          <label>Email: *
-            <input type="email" name="email" id="updateEmployeeEmail" class="required" required/></label>
+          <label>First Name: *<div class="input">
+            <input type="text" name="fname" id="updateEmployeeFName" class="required" required/><span class="req"></span></div></label>
+          <label>Last Name: *<div class="input">
+            <input type="text" name="lname" id="updateEmployeeLName" class="required" required/><span class="req"></span></div></label>
+          <label>Email: *<div class="input">
+            <input type="email" name="email" id="updateEmployeeEmail" class="required" required/><span class="req"></span></div></label>
           <label>Department:
             <select id="updateEmployeeDeptID">
               {{#each departments}}
                 <option value={{this.deptID}}>{{this.name}}</option>
               {{/each}}
+                <option value="None">None</option>
             </select>
           </label>
         <input class="btn" type="submit" value="Update Employee" />
