Add form reset for inputing new values after canceled inputs

--- a/views/certifications.hbs
+++ b/views/certifications.hbs
@@ -86,7 +86,7 @@
             <span class="req"></span></div></label>
         </fieldset>
         <input class="btn" type="submit" value="Add Certification" />
-        <input class="btn" type="button" value="Cancel" onClick="browseMain()" />
+        <input class="btn" type="button" value="Cancel" onClick="browseMain('addCertification')" />
       </form>
     </div>
     
