--- a/views/departments.hbs
+++ b/views/departments.hbs
@@ -73,7 +73,7 @@
           /><span class="req"></span>
           </div></label>
         <button type="submit">Submit</button>
-        <button type="button" onClick="browseMain()">Cancel</button>
+        <button type="button" onClick="browseMain('add-department-form')">Cancel</button>
       </form>
     </div>
 
