--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -91,7 +91,7 @@
           class="btn"
           type="button"
           value="Cancel"
-          onClick="browseMain()"
+          onClick="browseMain('addEmployee')"
         />
       </form>
     </div>
