--- a/views/employees_cert.hbs
+++ b/views/employees_cert.hbs
@@ -97,7 +97,7 @@
         <div class="input">
         <input id="newEmployeeCertExpirationDate" type="date" name="expirationDate" required /><span class="req"></span></div></label>
       <input class="btn" type="submit" value="Add Employee Certification" />
-      <input class="btn" type="button" value="Cancel" onClick="browseMain()" />
+      <input class="btn" type="button" value="Cancel" onClick="browseMain('add-employee-cert-form')" />
     </form>
   </div>
 
