--- a/views/employees_train.hbs
+++ b/views/employees_train.hbs
@@ -83,7 +83,7 @@
         </label>
       </div>
       <input class="btn" type="submit" value="Add Employee Training Session" />
-      <input class="btn" type="button" value="Cancel" onClick="browseMain()" />
+      <input class="btn" type="button" value="Cancel" onClick="browseMain('add-employee-training-form')" />
     </form>
   </div>
 
