--- a/views/employees_cert.hbs
+++ b/views/employees_cert.hbs
@@ -92,12 +92,27 @@
       </div>
       <label>Date Obtained: *
         <div class="input">
-        <input id="newEmployeeCertDateObtained" type="date" name="dateObtained" required /><span class="req"></span></div></label>
+          <input
+            id="newEmployeeCertDateObtained"
+            type="date"
+            name="dateObtained"
+            required
+          /><span class="req"></span></div></label>
       <label>Expiration Date: *
         <div class="input">
-        <input id="newEmployeeCertExpirationDate" type="date" name="expirationDate" required /><span class="req"></span></div></label>
+          <input
+            id="newEmployeeCertExpirationDate"
+            type="date"
+            name="expirationDate"
+            required
+          /><span class="req"></span></div></label>
       <input class="btn" type="submit" value="Add Employee Certification" />
-      <input class="btn" type="button" value="Cancel" onClick="browseMain('add-employee-cert-form')" />
+      <input
+        class="btn"
+        type="button"
+        value="Cancel"
+        onClick="browseMain('add-employee-cert-form')"
+      />
     </form>
   </div>
 
@@ -126,20 +141,20 @@
       </div>
       <label>Date Obtained: *
         <div class="input">
-        <input
-          type="date"
-          id="updateEmployeeCertDateObtained"
-          name="dateObtained"
-          required
-        /><span class="req"></span></div></label>
+          <input
+            type="date"
+            id="updateEmployeeCertDateObtained"
+            name="dateObtained"
+            required
+          /><span class="req"></span></div></label>
       <label>Expiration Date: *
         <div class="input">
-        <input
-          type="date"
-          id="updateEmployeeCertExpirationDate"
-          name="expirationDate"
-          required
-        /><span class="req"></span></div></label>
+          <input
+            type="date"
+            id="updateEmployeeCertExpirationDate"
+            name="expirationDate"
+            required
+          /><span class="req"></span></div></label>
       <input class="btn" type="submit" value="Update Employee Certification" />
       <input class="btn" type="button" value="Cancel" onClick="browseMain()" />
     </form>
@@ -150,7 +165,11 @@
       <legend><strong>Delete Employee Certification</strong></legend>
       <input type="hidden" id="deleteEmployeeCertID" />
       <label>Employee:
-        <input type="text" id="deleteEmployeeCertEmployeeName" disabled /></label>
+        <input
+          type="text"
+          id="deleteEmployeeCertEmployeeName"
+          disabled
+        /></label>
       <label>Certification:
         <input type="text" id="deleteEmployeeCertCertID" disabled /></label>
       <input class="btn" type="submit" value="Delete Employee Certification" />
